--- a/index.html
+++ b/index.html
@@ -4,23 +4,8 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Click and Drag</title>
-    <style>
-        .box {
-          position: absolute;
-          background-color: red;
-          cursor: move;
-        }
-        .grid-overlay {
-          position: absolute;
-          width: 100%;
-          height: 100%;
-          background-image: linear-gradient(to right, transparent 1%, #888 1%, #888 99%, transparent 99%);
-          background-size: 20px 20px;
-          pointer-events: none;
-          display: none;
-        }
-      </style>
+    <title>Click and Drag</title>  
+    <link rel="stylesheet" href="/style.css">
     </head>
     <body>
       <div class="box"></div>
